<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::table('block_assignments', function (Blueprint $table) {
            $table->string('language')->default('php')->after('starter_code');
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::table('block_assignments', function (Blueprint $table) {
            $table->dropColumn('language');
        });
    }
};
